<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/AppBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="30dp"
    tools:context=".BookingActivity">

    <ImageView
        android:id="@+id/coinImage"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/image_coin_content_description"
        app:layout_constraintBottom_toBottomOf="@+id/btnChangeLang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coin_icon" />

    <TextView
        android:id="@+id/creditAccount"
        style="@style/Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/btnChangeLang"
        app:layout_constraintEnd_toStartOf="@+id/coinImage"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnChangeLang"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/btn_change_language_content_description"
        app:layout_constraintEnd_toStartOf="@+id/creditAccount"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appName"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/instrumentPicture"
        android:layout_width="150dp"
        android:layout_height="225dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image_content_description"
        android:src="@drawable/guitar_picture_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName" />

    <TextView
        android:id="@+id/instrumentName"
        style="@style/Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Fender American Professional II Stratocaster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instrumentPicture" />

    <LinearLayout
        android:id="@+id/bookingEmailLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instrumentName">

        <TextView
            android:id="@+id/labelRentalEmail"
            style="@style/Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_rental_email" />

        <EditText
            android:id="@+id/rentalEmail"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="@string/hint_rental_email"
            android:inputType="text|textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/steel_gray" />
    </LinearLayout>

    <TextView
        android:id="@+id/labelRentalNumber"
        style="@style/Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/label_rental_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookingEmailLayout" />

    <com.google.android.material.slider.Slider
        android:id="@+id/rentalNumber"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:contentDescription="@string/rental_number_slider_content_description"
        android:stepSize="1"
        android:valueFrom="1"
        android:valueTo="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelRentalNumber" />

    <TextView
        android:id="@+id/labelRentalTime"
        style="@style/Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/label_rental_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rentalNumber" />

    <com.google.android.material.slider.Slider
        android:id="@+id/rentalTime"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:contentDescription="@string/rental_time_slider_content_description"
        android:stepSize="1"
        android:valueFrom="1"
        android:valueTo="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelRentalTime" />

    <TextView
        android:id="@+id/rentalPrice"
        style="@style/Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/label_rental_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rentalTime" />

    <Button
        android:id="@+id/btnConfirm"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/label_btn_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rentalPrice"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:text="@string/label_btn_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rentalPrice"
        app:layout_constraintVertical_bias="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>